--- a/android/app/src/main/res/layout/activity.xml
+++ b/android/app/src/main/res/layout/activity.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="ng.edu.aun.tina3.Activity">
+    tools:context="ng.edu.aun.tina3.gui.activity.Activity">
 
     <TextView
         android:layout_width="wrap_content"
