--- a/android/app/src/main/res/layout/fragment_outlet_list.xml
+++ b/android/app/src/main/res/layout/fragment_outlet_list.xml
@@ -154,9 +154,11 @@
 
 
         <FrameLayout
-            android:layout_width="240dp"
+            android:id="@+id/navigationContainer"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="start"
+            android:layout_gravity="left"
+            android:clickable="true"
             android:background="@color/white"
             >
 
@@ -166,6 +168,7 @@
     </android.support.v4.widget.DrawerLayout>
 
     <android.support.design.widget.FloatingActionButton
+        android:id="@+id/addButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
