--- a/android/app/src/main/res/layout/fragment_outlet_list.xml
+++ b/android/app/src/main/res/layout/fragment_outlet_list.xml
@@ -53,7 +53,7 @@
                         android:gravity="center|left"
                         android:textColor="@color/white"
                         android:id="@+id/aunId"
-                        android:text="@string/appliances"
+                        android:text="@string/smart_plugs"
                         android:textAllCaps="true"
                         app:fontAppearance="body2"
                         />
