updated smartplug api

--- a/android/app/src/main/res/layout/fragment_outlet_add.xml
+++ b/android/app/src/main/res/layout/fragment_outlet_add.xml
@@ -28,12 +28,27 @@
                 android:id="@+id/closeButton"
                 />
 
-            <com.litigy.lib.android.gui.view.textView.TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center|left"
-                android:textColor="@color/white"
-                />
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingRight="@dimen/margin_page"
+                >
+
+                <com.viewpagerindicator.CirclePageIndicator
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="4dp"
+                    android:padding="4dp"
+                    android:layout_gravity="center|right"
+                    android:id="@+id/indicator"
+                    app:fillColor="@color/white"
+                    app:pageColor="@color/black_half"
+                    app:strokeColor="@color/transparent"
+                    app:strokeWidth="2dp"
+                    />
+
+            </FrameLayout>
 
         </LinearLayout>
 
@@ -52,31 +67,13 @@
 
         </FrameLayout>
 
-        <LinearLayout
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:padding="@dimen/margin_page_half"
             >
 
-            <FrameLayout
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent">
-
-                <com.viewpagerindicator.CirclePageIndicator
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="4dp"
-                    android:layout_gravity="center|left"
-                    android:id="@+id/indicator"
-                    app:fillColor="@color/white"
-                    app:pageColor="@color/black_half"
-                    app:strokeColor="@color/transparent"
-                    app:strokeWidth="2dp"
-                    />
-
-            </FrameLayout>
 
             <com.litigy.lib.android.gui.view.button.Button
                 android:layout_width="wrap_content"
@@ -88,7 +85,7 @@
                 android:id="@+id/nextButton"
                 />
 
-        </LinearLayout>
+        </FrameLayout>
 
     </LinearLayout>
 
