--- a/android/app/src/main/res/layout/fragment_outlet_list.xml
+++ b/android/app/src/main/res/layout/fragment_outlet_list.xml
@@ -72,14 +72,17 @@
 
             <android.support.v4.widget.SwipeRefreshLayout
                 android:id="@+id/refreshLayout"
+                android:clipChildren="false"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
                 <FrameLayout
                     android:layout_width="match_parent"
+                    android:clipChildren="false"
                     android:layout_height="match_parent">
 
                     <android.support.v7.widget.RecyclerView
+                        android:clipChildren="false"
                         android:id="@+id/recyclerView"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"/>
