--- a/android/app/src/main/res/layout/fragment_outlet_control.xml
+++ b/android/app/src/main/res/layout/fragment_outlet_control.xml
@@ -3,12 +3,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clipChildren="false"
     android:background="@color/flat_clouds"
     android:clickable="true"
     >
 
     <ng.edu.aun.tina3.gui.custom.LightSwitch
         android:id="@+id/lightSwitch"
+        android:clipChildren="false"
         android:layout_margin="@dimen/height_toolbar_normal_double"
         android:layout_width="match_parent"
         android:layout_gravity="center"
