--- a/android/app/src/main/res/layout/fragment_outlet_automation.xml
+++ b/android/app/src/main/res/layout/fragment_outlet_automation.xml
@@ -26,6 +26,7 @@
                 android:layout_marginTop="@dimen/height_toolbar"
                 android:orientation="vertical"
                 android:gravity="center"
+                android:visibility="gone"
                 >
 
                 <ImageView
@@ -47,6 +48,44 @@
 
 
             </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/white"
+                android:orientation="vertical"
+                android:gravity="center"
+                android:id="@+id/error"
+                android:visibility="gone"
+                >
+
+                <ImageView
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:src="@mipmap/ic_alert_error_ddd_100"
+                    />
+
+                <com.litigy.lib.android.gui.view.textView.TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/margin_page"
+                    android:layout_marginRight="@dimen/height_toolbar"
+                    android:layout_marginLeft="@dimen/height_toolbar"
+                    android:text="@string/error_swipe_to_refresh"
+                    app:fontAppearance="caption"
+                    android:textColor="@color/aaa"
+                    />
+
+            </LinearLayout>
+
+            <android.support.v7.widget.RecyclerView
+                android:layout_marginTop="@dimen/height_toolbar"
+                android:id="@+id/recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                />
 
         </FrameLayout>
 
