--- a/android/app/src/main/res/layout/fragment_outlet_list.xml
+++ b/android/app/src/main/res/layout/fragment_outlet_list.xml
@@ -43,7 +43,7 @@
                         android:id="@+id/menuButton"
                         android:layout_width="@dimen/height_toolbar"
                         android:layout_height="match_parent"
-                        android:background="@color/transparent"
+                        android:background="@drawable/selector_light"
                         android:src="@mipmap/ic_action_navigation_menu"
                         />
 
@@ -62,7 +62,7 @@
                     <ImageButton
                         android:layout_width="@dimen/height_toolbar"
                         android:layout_height="match_parent"
-                        android:background="@color/transparent"
+                        android:background="@drawable/selector_light"
                         android:src="@mipmap/ic_action_action_search"
                         />
 
