--- a/android/app/src/main/res/layout/item_event.xml
+++ b/android/app/src/main/res/layout/item_event.xml
@@ -9,10 +9,13 @@
         android:id="@+id/card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_page"
+        android:layout_marginLeft="@dimen/margin_page"
+        android:layout_marginRight="@dimen/margin_page"
+        android:layout_marginTop="@dimen/margin_page"
         app:cardBackgroundColor="@color/white"
-        app:cardElevation="@dimen/elevation_default_card_restState"
+        app:cardElevation="0dp"
         app:cardCornerRadius="4dp"
+        android:background="@drawable/selector_dark_rectangle"
         >
 
         <LinearLayout
@@ -40,6 +43,7 @@
                         app:fabSize="mini"
                         app:backgroundTint="@color/ccc"
                         android:elevation="0dp"
+                        android:id="@+id/icon"
                         android:clickable="false"
                         app:elevation="0dp"
                         android:src="@mipmap/ic_action_timetable"
@@ -53,7 +57,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center|left"
-                    android:textColor="@color/ccc"
+                    android:textColor="@color/nine"
                     android:lines="1"
                     android:text="@string/auto_control_smart_plug"
                     app:fontAppearance="body2"
