--- a/android/app/src/main/res/layout/fragment_outlet_add_event.xml
+++ b/android/app/src/main/res/layout/fragment_outlet_add_event.xml
@@ -36,7 +36,7 @@
                 <ImageButton
                     android:layout_width="@dimen/height_toolbar"
                     android:layout_height="match_parent"
-                    android:background="@color/transparent"
+                    android:background="@drawable/selector_light"
                     android:src="@mipmap/ic_action_navigation_close"
                     android:id="@+id/closeButton"
                     />
@@ -60,7 +60,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_page"
             app:cardBackgroundColor="@color/white"
-            app:cardElevation="@dimen/elevation_default_card_restState"
+            app:cardElevation="0dp"
             app:cardCornerRadius="4dp"
             >
 
@@ -102,7 +102,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:gravity="center|left"
-                        android:textColor="@color/ccc"
+                        android:textColor="@color/nine"
                         android:lines="1"
                         android:text="@string/auto_control_smart_plug"
                         app:fontAppearance="body2"
@@ -137,7 +137,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/switch_on_at"
                         app:fontAppearance="body2"
-                        android:textColor="@color/ccc"
+                        android:textColor="@color/aaa"
                         />
 
 
@@ -150,6 +150,7 @@
                         app:fontAppearance="body2"
                         android:text="12:00 PM"
                         android:lines="1"
+                        android:background="@drawable/selector_dark_rectangle"
                         android:paddingRight="@dimen/margin_page"
                         android:id="@+id/onTime"
                         />
@@ -170,7 +171,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/switch_off_at"
                         app:fontAppearance="body2"
-                        android:textColor="@color/ccc"
+                        android:textColor="@color/aaa"
                         />
 
                     <com.litigy.lib.android.gui.view.textView.TextView
@@ -182,6 +183,7 @@
                         app:fontAppearance="body2"
                         android:text="2:00 PM"
                         android:lines="1"
+                        android:background="@drawable/selector_dark_rectangle"
                         android:paddingRight="@dimen/margin_page"
                         android:id="@+id/offTime"
                         />
@@ -193,7 +195,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/margin_page"
                     android:layout_gravity="right"
-                    android:textColor="@color/ddd"
+                    android:textColor="@color/ccc"
                     android:id="@+id/durationHint"
                     android:text="@string/duration_hint"
                     app:fontAppearance="caption"
