--- a/android/app/src/main/res/layout/fragment_outlet_automation.xml
+++ b/android/app/src/main/res/layout/fragment_outlet_automation.xml
@@ -80,13 +80,6 @@
 
             </LinearLayout>
 
-            <android.support.v7.widget.RecyclerView
-                android:layout_marginTop="@dimen/height_toolbar"
-                android:id="@+id/recyclerView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                />
-
         </FrameLayout>
 
         <android.support.v7.widget.CardView
@@ -135,7 +128,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/height_toolbar">
 
-
+                    <com.litigy.lib.android.gui.view.textView.TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:lines="1"
+                        app:fontAppearance="body2"
+                        android:id="@+id/infoTextView"
+                        android:textColor="@color/ccc"
+                        />
 
                 </FrameLayout>
 
@@ -152,7 +153,19 @@
 
             <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"></FrameLayout>
+                android:layout_height="match_parent">
+
+                <android.support.v7.widget.RecyclerView
+                    android:layout_marginTop="@dimen/height_toolbar"
+                    android:id="@+id/recyclerView"
+                    android:paddingTop="2dp"
+                    android:paddingBottom="2dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    />
+
+
+            </FrameLayout>
 
         </android.support.v4.widget.SwipeRefreshLayout>
 
